--- a/package.json
+++ b/package.json
@@ -3,13 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome": "1.1.8",
+    "@fortawesome/fontawesome-free-brands": "5.0.13",
+    "@fortawesome/fontawesome-free-regular": "5.0.13",
+    "@fortawesome/fontawesome-free-solid": "5.0.13",
+    "@fortawesome/fontawesome-svg-core": "1.2.28",
+    "@fortawesome/react-fontawesome": "0.1.4",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
+    "@testing-library/user-event": "^12.6.0",
+    "antd": "^4.2.2",
+    "history": "4.10.1",
+    "node-sass": "^4.14.1",
+    "prop-types": "15.7.2",
+    "qrcode.react": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "7.2.0",
+    "react-redux-loading-bar": "4.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "redux": "4.0.5",
+    "redux-logger": "3.0.6",
+    "redux-thunk": "2.3.0",
+    "use-media-antd-query": "1.0.1",
+    "web-vitals": "^0.2.4",
+    "validate.js": "0.12.0",
+    "moment": "2.23.0",
+    "js-cookie": "2.2.1",
+    "axios": "0.19.2",
+    "base64-url": "2.3.3"
+  },
+  "devDependencies": {
+    "redux-devtools": "3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
