--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.2.2",
+    "axios": "0.19.2",
+    "base64-url": "2.3.3",
+    "express": "4.16.4",
+    "firebase": "^8.2.0",
     "history": "4.10.1",
+    "js-cookie": "2.2.1",
+    "moment": "2.23.0",
     "node-sass": "^4.14.1",
     "prop-types": "15.7.2",
     "qrcode.react": "^1.0.0",
@@ -27,13 +33,8 @@
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
     "use-media-antd-query": "1.0.1",
-    "web-vitals": "^0.2.4",
     "validate.js": "0.12.0",
-    "moment": "2.23.0",
-    "js-cookie": "2.2.1",
-    "axios": "0.19.2",
-    "base64-url": "2.3.3",
-    "express": "4.16.4"
+    "web-vitals": "^0.2.4"
   },
   "devDependencies": {
     "redux-devtools": "3.5.0"
